# test-cicd

./: .pre-commit-config.yaml  README.md  dna_contract_v1.yaml  dna_contract_v2.yaml  pyproject.toml  test-app-1776177938.txt
.github/workflows/: CODEOWNERS  cd,yml  cd.yml  ci.yml  test.yml  test_email.yml  test_workflows.yml
cal-comp-proc/: Dockerfile  pyproject.toml
cal-comp-proc/src/: README.md
cal-comp-proc/src/dummy/: main.py
cal-comp-proc/tests/: test_main.py
contracts/: dna_contract.avsc_v2.yaml
datacontract/system/test/test_folder/: dna_contract_v1.yaml  dna_contract_v2.yaml
edp_datacontract/system/sc/dna/: fact_production_order_v1.yaml  fact_production_order_v2.yaml
system/datacontract/test_folder/: dna_contract_v1.yaml
