[project]
name = "sms-comp-proc"
version = "0.1.0"
description = "Sample project for CI/CD test"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.0"
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
