[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dummy-project"
version = "0.1.0"
description = "A dummy project to test CI"
authors = [{ name = "Test User" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
